crates/shuffle/src/session/snapshots/shuffle__session__state__test__ratchet_after_first_accounted_delta.snap
---
source: crates/shuffle/src/session/state.rs
expression: frontier_readout(&pipeline.unresolved)
---
[
    (
        "journal/A",
        0,
        [
            (
                120,
                200,
                -5000,
            ),
        ],
        4000,
        100,
    ),
    (
        "journal/B",
        0,
        [
            (
                120,
                200,
                -5000,
            ),
        ],
        4000,
        100,
    ),
]
