crates/shuffle/src/session/snapshots/shuffle__session__state__test__ratchet_ceiling_from_completed_clocks.snap
---
source: crates/shuffle/src/session/state.rs
expression: frontier_readout(&recovery)
---
[
    (
        "journal/B",
        1,
        [
            (
                290,
                250,
                -900,
            ),
            (
                400,
                0,
                -900,
            ),
        ],
        0,
        0,
    ),
]
