crates/shuffle/src/session/snapshots/shuffle__session__state__test__ratchet_frozen_floor_checkpoint.snap
---
source: crates/shuffle/src/session/state.rs
expression: frontier_readout(&recovery)
---
[
    (
        "journal/A",
        0,
        [
            (
                100,
                100,
                -2000,
            ),
        ],
        0,
        0,
    ),
]
