crates/shuffle/src/session/snapshots/shuffle__session__state__test__ratchet_prunes_stale_hints.snap
---
source: crates/shuffle/src/session/state.rs
expression: frontier_readout(&pipeline.unresolved)
---
[
    (
        "journal/A",
        0,
        [
            (
                120,
                200,
                -900,
            ),
            (
                100,
                0,
                -900,
            ),
        ],
        0,
        0,
    ),
]
