crates/shuffle/src/session/snapshots/shuffle__session__state__test__ratchet_recovery_checkpoint.snap
---
source: crates/shuffle/src/session/state.rs
expression: frontier_readout(&recovery)
---
[
    (
        "journal/A",
        0,
        [
            (
                200,
                200,
                -8000,
            ),
        ],
        7000,
        150,
    ),
    (
        "journal/B",
        0,
        [
            (
                200,
                200,
                -12000,
            ),
        ],
        11000,
        -50,
    ),
]
