crates/shuffle/src/session/snapshots/shuffle__session__state__test__ratchet_rejects_whole_delta.snap
---
source: crates/shuffle/src/session/state.rs
expression: frontier_readout(&pipeline.unresolved)
---
[
    (
        "journal/A",
        0,
        [
            (
                120,
                200,
                -500,
            ),
        ],
        0,
        0,
    ),
    (
        "journal/B",
        0,
        [
            (
                50,
                200,
                -500,
            ),
        ],
        0,
        0,
    ),
]
