crates/shuffle/src/session/snapshots/shuffle__session__state__test__routing.snap
---
source: crates/shuffle/src/session/state.rs
expression: "&routed_reads"
---
[
    RoutedRead {
        journal_key_begin: 268435456,
        journal_key_end: 536870912,
        shuffle_key_values: [],
        shuffle_key_hash: None,
        member_start: 0,
        member_stop: 1,
        member_index: 0,
        member_key_begin: 0,
        member_key_end: 1431655764,
    },
    RoutedRead {
        journal_key_begin: 3149642683,
        journal_key_end: 3435973836,
        shuffle_key_values: [],
        shuffle_key_hash: None,
        member_start: 2,
        member_stop: 3,
        member_index: 2,
        member_key_begin: 2863311530,
        member_key_end: 4294967295,
    },
    RoutedRead {
        journal_key_begin: 1073741824,
        journal_key_end: 1879048192,
        shuffle_key_values: [],
        shuffle_key_hash: None,
        member_start: 0,
        member_stop: 2,
        member_index: 1,
        member_key_begin: 1431655765,
        member_key_end: 2863311529,
    },
    RoutedRead {
        journal_key_begin: 0,
        journal_key_end: 4294967295,
        shuffle_key_values: [],
        shuffle_key_hash: None,
        member_start: 0,
        member_stop: 3,
        member_index: 1,
        member_key_begin: 1431655765,
        member_key_end: 2863311529,
    },
    RoutedRead {
        journal_key_begin: 0,
        journal_key_end: 4294967295,
        shuffle_key_values: [
            Number(42),
        ],
        shuffle_key_hash: Some(
            2003427982,
        ),
        member_start: 1,
        member_stop: 2,
        member_index: 1,
        member_key_begin: 1431655765,
        member_key_end: 2863311529,
    },
    RoutedRead {
        journal_key_begin: 0,
        journal_key_end: 4294967295,
        shuffle_key_values: [
            Number(100),
        ],
        shuffle_key_hash: Some(
            226035771,
        ),
        member_start: 0,
        member_stop: 1,
        member_index: 0,
        member_key_begin: 0,
        member_key_end: 1431655764,
    },
    RoutedRead {
        journal_key_begin: 0,
        journal_key_end: 4294967295,
        shuffle_key_values: [
            Null,
        ],
        shuffle_key_hash: Some(
            1450417663,
        ),
        member_start: 1,
        member_stop: 2,
        member_index: 1,
        member_key_begin: 1431655765,
        member_key_end: 2863311529,
    },
    RoutedRead {
        journal_key_begin: 0,
        journal_key_end: 4294967295,
        shuffle_key_values: [
            Bool(true),
        ],
        shuffle_key_hash: Some(
            3119549752,
        ),
        member_start: 2,
        member_stop: 3,
        member_index: 2,
        member_key_begin: 2863311530,
        member_key_end: 4294967295,
    },
    RoutedRead {
        journal_key_begin: 1431655765,
        journal_key_end: 1431655765,
        shuffle_key_values: [],
        shuffle_key_hash: None,
        member_start: 1,
        member_stop: 2,
        member_index: 1,
        member_key_begin: 1431655765,
        member_key_end: 2863311529,
    },
    RoutedRead {
        journal_key_begin: 0,
        journal_key_end: 4294967295,
        shuffle_key_values: [],
        shuffle_key_hash: None,
        member_start: 0,
        member_stop: 3,
        member_index: 1,
        member_key_begin: 1431655765,
        member_key_end: 2863311529,
    },
]
