crates/shuffle/src/session/snapshots/shuffle__session__state__test__stale_hint_filtered.snap
---
source: crates/shuffle/src/session/state.rs
expression: pipeline_snapshot(&pipeline)
---
PipelineSnapshot {
    recovery_session: false,
    ready: Frontier {
        journals: [
            JournalFrontier {
                journal: "journal/A",
                binding: 0,
                producers: [
                    ProducerFrontier {
                        producer: Producer(01:00:00:00:00:00),
                        last_commit: Clock(75s 0ns),
                        hinted_commit: Clock(0s 0ns),
                        offset: -500,
                    },
                    ProducerFrontier {
                        producer: Producer(03:00:00:00:00:00),
                        last_commit: Clock(80s 0ns),
                        hinted_commit: Clock(0s 0ns),
                        offset: -100,
                    },
                ],
                bytes_read_delta: 0,
                bytes_behind_delta: 0,
            },
            JournalFrontier {
                journal: "journal/C",
                binding: 1,
                producers: [
                    ProducerFrontier {
                        producer: Producer(03:00:00:00:00:00),
                        last_commit: Clock(40s 0ns),
                        hinted_commit: Clock(0s 0ns),
                        offset: -50,
                    },
                ],
                bytes_read_delta: 0,
                bytes_behind_delta: 0,
            },
        ],
        flushed_lsn: [],
        latest_backfill_begin: {},
        latest_backfill_complete: {},
        unresolved_hints: 0,
    },
    unresolved: Frontier {
        journals: [],
        flushed_lsn: [],
        latest_backfill_begin: {},
        latest_backfill_complete: {},
        unresolved_hints: 0,
    },
    unresolved_count: 0,
    progressed: Frontier {
        journals: [],
        flushed_lsn: [],
        latest_backfill_begin: {},
        latest_backfill_complete: {},
        unresolved_hints: 0,
    },
}
